--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,6 @@
     </nav>
 
     <section class="upload-container">
-        <!-- Drop Zone -->
         <div class="drop-zone">
             <div class="icon-container">
                 <img src="img/file.svg" alt="file icon" class="center" draggable="false">
@@ -29,7 +28,6 @@
             <div class="title">Drop your Files here or, <span class="browseBtn">browse</span></div>
         </div>
 
-        <!-- Progress Container -->
         <div class="progress-container">
             <div class="bg-progress"></div>
             <div class="inner-container">
@@ -41,7 +39,6 @@
             </div>
         </div>
 
-        <!-- Sharing Container -->
         <div class="sharing-container">
             <p class="expire">Link expires in 24 hrs</p>
             <div class="input-container">
@@ -66,10 +63,8 @@
         </div>
     </section>
 
-    <!-- Toast Notification -->
     <div class="toast"></div>
 
-    <!-- Scripts -->
-    <script src="js/upload.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
