--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,15 @@
         </div>
 
         <div class="sharing-container">
+
+            //
+            <!-- Add this in the sharing-container div -->
+<div class="qr-container">
+    <img id="qrCode" alt="QR Code">
+    <button id="downloadQR">Download QR Code</button>
+</div>
+
+
             <p class="expire">Link expires in 24 hrs</p>
             <div class="input-container">
                 <input type="text" id="fileURL" readonly>
